Centered "Privacy settings" button in PuzzleCollection, fixed the text wrap

--- a/src/views/PuzzleCollection/PuzzleCollection.styl
+++ b/src/views/PuzzleCollection/PuzzleCollection.styl
@@ -32,4 +32,9 @@
     .update {
         text-align: center;
     }
+
+    .privacy {
+        width: 100%;
+        text-align: center;
+    }
 }
